<resources>
    <string name="app_name">My Modules</string>
    <string name="C346">C346 Android Programming</string>
    <string name="C349">C349 iPad Programming</string>
    <string name="credit">Module Credit:</string>
    <string name="sem">Semester:</string>
    <string name="year">Year:</string>
    <string name="name">Module Name:</string>
    <string name="code">Module Code:</string>
</resources>
