<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <TextView
        android:id="@+id/tvSem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem" />

    <TextView
        android:id="@+id/tvCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit" />

    <TextView
        android:id="@+id/tvVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back " />
</LinearLayout>
